# pathtracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.bat  configure.sh
.github/workflows/: main.yml
demos/: CMakeLists.txt  readme.MD  three_balls.cpp
external_libraries/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  geometry.hpp  hit.hpp  multi_geometry.cpp  multi_geometry.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  triangle.hpp
src/image/: CMakeLists.txt  image.hpp
src/image_output/: CMakeLists.txt  netbpm_output.cpp  netbpm_output.hpp
src/light_physics/: CMakeLists.txt  constexpr_math.hpp  lens.hpp  quadrature.hpp  refraction.hpp
src/rendering/: CMakeLists.txt  color.hpp  light_ray.hpp  material.hpp  material_refractive.hpp  renderable.hpp
src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  lens.hpp  scene.hpp
test/: CMakeLists.txt  test_main.cpp
test/test_geometry/: test_multi_geometry.hpp  test_ray.h  test_sphere.h  test_sphere.hpp
test/test_image_output/: test_netbpm_output.hpp
test/test_light_physics/: test_constexpr_math.hpp
test/test_rendering/: test_material.hpp  test_renderable.hpp
test/test_scene/: test_camera.hpp
